completed books logic

--- a/views/book-views/book-create.hbs
+++ b/views/book-views/book-create.hbs
@@ -13,6 +13,9 @@
   <label for="rate-input">Rate:</label>
   <input type="number" name='rating' id='rate-input' min='1' max='10' />
 
+  <label for="image-input">Rate:</label>
+  <input type="text" name='image' id='image-input' />
+
   <button type='submit'>Create</button>
 
 </form>
