--- a/views/book-views/books-list.hbs
+++ b/views/book-views/books-list.hbs
@@ -7,6 +7,7 @@
   <p>By: {{author}}</p>
   <a href="/books/details/{{_id}}">See Details</a>
   <a href="/books/edit/{{_id}}">Edit</a>
+  <form action="/books/delete/{{this._id}}" method="post"><button>Delete</button></form>
 <hr>
 </div>
 {{/each}}
