--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,7 +8,13 @@
   <link rel="stylesheet" href="/stylesheets/style.css" />
 </head>
 <body>
-
+<nav>
+  <div>
+      <a href="/">Home</a>
+      <a href="/books">Books</a>
+      <a href="/authors">Authors</a>
+  </div>
+</nav>
   {{{body}}}
 
   <script src="/javascripts/script.js"></script>
