--- a/views/book-views/book-create.hbs
+++ b/views/book-views/book-create.hbs
@@ -13,7 +13,7 @@
   <label for="rate-input">Rate:</label>
   <input type="number" name='rating' id='rate-input' min='1' max='10' />
 
-  <label for="image-input">Rate:</label>
+  <label for="image-input">Cover image:</label>
   <input type="text" name='image' id='image-input' />
 
   <button type='submit'>Create</button>
