related books database with authors database

--- a/views/author-views/authors-edit.hbs
+++ b/views/author-views/authors-edit.hbs
@@ -3,7 +3,7 @@
 <form action="/authors/edit/{{author._id}}" method="post">
 
   <label for="full-name-input">First Name:
-  <input type="text" name="fullName" id="first-name-input" value="{{author.firstName}}" />
+  <input type="text" name="fullName" id="first-name-input" value="{{author.fullName}}" />
   </label>
 
   <label for="date-of-birth">Date Of Birth
