--- a/views/book-views/book-edit.hbs
+++ b/views/book-views/book-edit.hbs
@@ -1,21 +1,30 @@
-<h2>Edit the book: {{book.title}}</h2>
+<h2>Edit the book: {{_doc.title}}</h2>
 
-<form action="/books/edit/{{book._id}}" method="post">
+<form action="/books/edit/{{_doc._id}}" method="post">
 
   <label for="title-input">Title:</label>
-  <input type="text" name="title" id="title-input" value="{{book.title}}" />
-
-  <label for="author-input">Author:</label>
-  <input type="text" name="author" id="author-input" value="{{book.author}}" />
+  <input type="text" name="title" id="title-input" value="{{_doc.title}}" />
 
   <label for="description-input">Description:</label>
-  <textarea name="description" id="description-input" cols="30" rows="4">{{book.description}} </textarea>
+  <textarea name="description" id="description-input" cols="30" rows="4">{{_doc.description}} </textarea>
 
   <label for="rate-input">Rate:</label>
-  <input type="number" name="rating" id="rate-input" min="1" max="10" value="{{book.rating}}" />
+  <input type="number" name="rating" id="rate-input" min="1" max="10" value="{{_doc.rating}}" />
   
   <label for="image-input">Image:</label>
-  <input type="text" name="image" id="image-input" value="{{book.image}}" />
+  <input type="text" name="image" id="image-input" value="{{_doc.image}}" />
+
+  <br>
+
+  <div>
+    <h3>Authors:</h3>
+    {{#each authors}}
+    <div>
+      <input id="input{{@index}}" name="author"  type="checkbox" value="{{_id}}" />
+      <label for="input{{@index}}">{{fullName}} </label>
+    </div>
+    {{/each}}
+  </div>
 
   <button type="submit">Save changes</button>
 
