--- a/views/book-views/book-details.hbs
+++ b/views/book-views/book-details.hbs
@@ -1,6 +1,8 @@
 <h1>{{book.title}}</h1>
 <hr>
-<p>Written by: {{book.author}}</p>
+{{#each book.author}}
+  <p>Written by: <a href="/authors/details/{{_id}}">{{fullName}}</a></p>
+{{/each}}
 <p>Summary: {{book.description}}</p>
 <p>Rating: {{book.rating}}/10</p>
 <img src="{{book.image}}" alt="{{book.title}} picture">
