--- a/views/book-views/books-list.hbs
+++ b/views/book-views/books-list.hbs
@@ -1,14 +1,16 @@
 <h1>Books</h1> 
 <a href="/books/create">Create a Book</a>
 <hr>
-
+<div class='bookListContainer'>
 {{#each books}}
-<div>
+<div class='bookList'>
   <img src="{{image}}" alt="{{title}} picture">
   <h3>{{title}}</h3>
-  <a href="/books/details/{{_id}}">See Details</a>
-  <a href="/books/edit/{{_id}}">Edit</a>
+  <div class='bookListLinks'>
+    <a href="/books/details/{{_id}}">Details</a>
+    <a href="/books/edit/{{_id}}">Edit</a>
+  </div>
   <form action="/books/delete/{{this._id}}" method="post"><button>Delete</button></form>
-<hr>
 </div>
 {{/each}}
+</div>
