--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,6 +13,7 @@
       <a href="/">Home</a>
       <a href="/books">Books</a>
       <a href="/authors">Authors</a>
+      <a href="/auth/signup">Log In</a>
   </div>
 </nav>
   {{{body}}}
