--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>{{title}}</title>
-  <link rel="stylesheet" href="/stylesheets/style.css" />
-</head>
-<body>
-<nav>
-  <div>
-      <a href="/">Home</a>
-      <a href="/books">Books</a>
-      <a href="/authors">Authors</a>
-      <a href="/auth/signup">Log In</a>
-  </div>
-</nav>
-  {{{body}}}
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>{{title}}</title>
+    <link rel="stylesheet" href="/stylesheets/style.css" />
+  </head>
+  <body>
+    <nav>
+      <div>
+          <a href="/">Home</a>
+          <a href="/books">Books</a>
+          <a href="/authors">Authors</a>
+      </div>
+      <div>
+          <a href="/auth/signup">Sign Up</a>    
+          <a href="/auth/login">Log In</a>    
+      </div>
+    </nav>
+    
+    {{{body}}}
 
-  <script src="/javascripts/script.js"></script>
-</body>
+    <script src="/javascripts/script.js"></script>
+  </body>
 </html>
