--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,8 +1,82 @@
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
 
 a {
-  color: #00B7FF;
+  color: #00B7FF; }
+
+/*# sourceMappingURL=style.css.map */
+nav{
+  display: flex;
+  justify-content:space-between ;
+}
+
+.bookListContainer{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.bookList{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 20%;
+  border: solid 2px #00B7FF;
+  margin: 10px;
+  height: 400px;
+  padding: 5px;
+}
+
+.bookList > img {
+  max-width: 100%;
+  max-height: 100%;
+  height: 80%;
+}
+
+.bookList > h3 {
+  margin: 5px 0px;
+}
+
+.bookListLinks{
+  margin-bottom: 5px;
+}
+
+.bookListLinks a{
+  width: 50px;
+  margin-bottom: 5px;
+}
+
+.detailsContainer{
+  display: flex;
+  align-items: center;
+  /* justify-content: center; */
+  padding-left: 5px;
+}
+
+.detailsContainer > img{
+  height: 400px;
+}
+
+.detailsContainer ul li{
+  list-style-type: none;
+  margin-top: 5px;
+}
+.details{
+  width: 50%;
+  padding-right: 15px;
+}
+
+.detailsLinkContainer{
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.editMainContainer > div{
+  margin-top: 10px;
+}
+
+.editMainContainer > div > label{
+  display: flex;
+  align-items: center;
 }
