--- a/views/auth-views/login-form.hbs
+++ b/views/auth-views/login-form.hbs
@@ -1,6 +1,6 @@
 <div if='form'>
   <h2>Login</h2>
-  <form action="/login" method="POST">
+  <form action="/auth/login" method="POST">
     <label>Email
         <input type="email" name="email" placeholder="youremail@something.com" />
     </label>
