corrected author image. corrected comments bug. only logged in users can comment

--- a/views/author-views/author-create.hbs
+++ b/views/author-views/author-create.hbs
@@ -18,7 +18,7 @@
   </label>
   
   <label for="author-image">Author Image
-    <input type="text" nam='image' id='author-image'>
+    <input type="text" name='image' id='author-image'>
   </label>
 
 
