--- a/views/author-views/authors-edit.hbs
+++ b/views/author-views/authors-edit.hbs
@@ -19,7 +19,7 @@
   </label>
 
     <label for="author-image">Author Image
-    <input type="text" nam='image' id='author-image' value='{{author.image}}'>
+    <input type="text" name='image' id='author-image' value='{{author.image}}'>
   </label>
 
   <button type="submit">Save changes</button>
